blue-green-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
    - host: blue-green.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-app
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"
spec:
  ingressClassName: nginx 
  rules:
    - host: blue-green.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-app
                port:
                  number: 8081
